2011-11-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/sign-tarball:
 - New tool.
 - Creates GPG signature & hash sums for tarball.
2011-11-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 debian/changelog:
 - Real start of 4.0 series.
2011-11-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/subtransaction.hxx, src/subtransaction.cxx:
 - Explicit subtransaction(subtransaction &) constructor.
 - Makes it easier to nest subtransactions inside subtransactions.
 - Thanks Chris Angelico for reporting the problem.
2011-11-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, doc/Makefile.am:
 - Fixed fail-if-no-doxygen logic.  Really fails now.
 - Also fail if xmlto is missing (and documentation build not disabled).
 - Really fixes #245 (I hope).
2011-11-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Makefile.am:
 - Fail if doxygen not available (and documentation build not disabled).
 - Fixes #245.  Thanks Chris Angelico.
2011-11-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/performance.hxx:
 - Don't mention tablestreams any more.
 - Fixes #246.  Thanks Chris Angelico.
2011-11-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx,
 include/pqxx/internal/gates/connection-pipeline.hxx, src/connection_base.cxx:
 - encoding_code() can't be "throw ()"; it calls activate().
 - Crashed program when connection was lost before transaction started.
 - Thanks Vasya Pupkin for reporting this with a great little test program.
2011-11-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/subtransaction.hxx:
 - Fixed broken example.  Thanks Chris Angelico.
2011-11-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt, win32/mingw.mak.template:
 - Remove quotes that confused MinGW make.
 - MinGW's make tool has a different name.
 - As per patch in #244, thanks Sam Kapilivksy.
2011-11-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 debian/libpqxx.docs, debian/libpqxx-dev.docs:
 - Removed reference to old TODO file.
2011-11-22  Jeroen T. Vermeulen <jtv@xs4all.nl>